welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:8: error: not found: value Baissebrosse
Baissebrosse()
^