welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
avance
baisseBrosse()
leveBrosse()
avance()
gauche()
avance()
Baissebrosse()
leveBrosse
recule
droite
avance
baisseBrosse
leveBrosse
}

